welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: not found: value prendsBiscuit
prendsBiscuit()
^